# Network-Anomaly-Root-Cause-Assistant

./: .env.example  .gitignore  BLUEPRINT.md  Ideation.md  Makefile  NETWORK_ANOMALY_RCA_PROTOTYPE_BLUEPRINT.md  PROJECT_SUMMARY.md  Person1Log.md  ProblemStatement.md  README.md  design.md  network_anomaly_rca.db-shm  network_anomaly_rca.db-wal  tasks.md
backend/: README.md  alembic.ini  openapi.json  pyproject.toml
backend/app/: __init__.py  config.py  main.py  readiness.py
backend/app/api/: __init__.py  assistant.py  dependencies.py  error_responses.py  events.py  incidents.py  reviews.py  simulator.py  stubs.py  topology.py
backend/app/audit/: __init__.py  contracts.py  service.py
backend/app/concepts/: __init__.py  service.py
backend/app/contracts/: __init__.py  analysis.py  anomalies.py  api.py  base.py  events.py  evidence.py  hypotheses.py  incidents.py  ingestion.py  overview.py  reviews.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/detection/: __init__.py  alert_severity.py  common.py  config_change.py  detector.py  ewma_detector.py  ewma_store.py  log_rule.py  reference_threshold.py  rolling_zscore.py  service.py  topology_cascade.py  topology_view.py  trace_anomaly.py
backend/app/evidence/: __init__.py  collector.py
backend/app/explanation/: __init__.py  llm_engine.py  service.py  template_engine.py  validator.py
backend/app/fixtures/: __init__.py  detector_rules.yaml  hypotheses.yaml  playbooks.yaml  (+2 more)
backend/migrations/: env.py
backend/network_anomaly_rca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_handover_report.py  test_simulator_phase1.py
(+235 files in other folders)
