[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "network-anomaly-rca"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.5",
  "pydantic==2.10.2",
  "sqlalchemy==2.0.43",
  "alembic==1.16.5",
  "uvicorn==0.32.0",
  "PyYAML==6.0.2",
  "numpy==2.5.1",
  "pandas==3.0.3",
  "ulid-py==1.1.0",
]

[project.optional-dependencies]
test = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

