[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "network-anomaly-rca"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.5",
  "pydantic==2.10.2",
  "sqlalchemy==2.0.43",
  "alembic==1.16.5",
  "uvicorn==0.32.0",
  "PyYAML==6.0.2",
  "Jinja2==3.1.6",
  "numpy==2.5.1",
  "pandas==3.0.3",
  "ulid-py==1.1.0",
  "networkx==3.5",
]

[project.optional-dependencies]
llm = [
  "ollama==0.6.2",
]
test = [
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "ruff==0.12.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
